Adding Products to cart - works all fine *implement POST endpoint for ElementKoszyka *create api/ElementKoszyka/CheckIfExists endpoint *add CheckIfExistsInService() abstract method for ADataStore *Implement UpdateItemInService() in ElementKoszykaDataStore *Implement CheckIfExistsInService() in ElementKoszykaDataStore *set AuthMIddleware for ElementKoszyka endpoint *update API reference *Create AddToCartCommand and bind it to button *Implement adding to Cart logic in SklepViewModel *
